lesson23/Манифесты/diagnostic-tools.yaml

apiVersion: v1
kind: Pod
metadata:
  name: diagnostic-tool-pod
  namespace: dev
spec:
  serviceAccountName: diagnostic-tool
  containers:
  - name: diagnostic-container
    image: bitnami/kubectl:latest
    command: ["/bin/sh"]
    args:
    - -c
    - |
      echo "Начинаю мониторинг подов в namespace dev..."
      while true; do
        echo "=== Обнаруженные поды Wordpress в $(date) ==="
        kubectl get pods -n dev -l app=wordpress -owide
        echo "============================================="
        sleep 30
      done
